Fixed bug where paragraphs were rendered side-by-side on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,7 @@ Header and Body CSS
 
 #question {
     display: flex;
+    flex-direction: column;
     height: 100px;
 }
 
